# athlete_tracking

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tracking_controller.cpp  tracking_controller.hpp  yolo_detector.cpp  yolo_detector.hpp
output/: drill_1_detections.txt  drill_2_detections.txt  exercises_detections.txt
sources/: main.cpp  tracking_config.hpp  tracking_controller.cpp  tracking_controller.hpp  yolo_detector.cpp  yolo_detector.hpp
